--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "com.TeenKo.IDMapping",
+  "name": "com.teenko.idmapping",
   "author": "TeenKo",
   "displayName": "IDMapping",
   "description": "Alternative to enum for unity",
