--- a/GameModules/IdMapping/gameModules.idMapping.asmdef
+++ b/GameModules/IdMapping/gameModules.idMapping.asmdef
@@ -5,7 +5,9 @@
         "GUID:03701342d28d44d68ec20cf7aa7d08aa",
         "GUID:6055be8ebefd69e48b49212b09b47b2f"
     ],
-    "includePlatforms": [],
+    "includePlatforms": [
+        "Editor"
+    ],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": false,
